--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgr2Wp6QZ79sHfNvnOiNdMYjtrNyXcq6U"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4l8kkp7btlK2uJyf2PnnHF_9HgNseLBA"></script>
+
+  <meta charset="UTF-8">
+  <title>flutter_notification_test</title>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-messaging.js"></script>
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
